syntax = "proto3";
package tenant_app;

option go_package = "nfxid/protos/gen/tenants/tenant_app;tenantapppb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// 租户应用状态枚举
enum TenantsTenantAppStatus {
  TENANTS_TENANT_APP_STATUS_UNSPECIFIED = 0;
  TENANTS_TENANT_APP_STATUS_ACTIVE = 1;    // 激活
  TENANTS_TENANT_APP_STATUS_DISABLED = 2;  // 禁用
  TENANTS_TENANT_APP_STATUS_SUSPENDED = 3; // 暂停
}

// 租户应用信息
message TenantApp {
  string id = 1;                           // 租户应用ID (UUID)
  string tenant_id = 2;                    // 租户ID (UUID)
  string app_id = 3;                       // 应用ID (UUID)
  TenantsTenantAppStatus status = 4;       // 状态：ACTIVE, DISABLED, SUSPENDED
  google.protobuf.Timestamp created_at = 5;     // 创建时间
  optional string created_by = 6;         // 创建者ID (UUID)
  google.protobuf.Timestamp updated_at = 7;     // 更新时间
  optional google.protobuf.Struct settings = 8; // 设置 (JSONB)
}

// TenantApp 服务 - 供其他服务通过 gRPC 管理租户应用
service TenantAppService {
  // 根据ID获取租户应用
  rpc GetTenantAppByID (GetTenantAppByIDRequest) returns (GetTenantAppByIDResponse);
  
  // 根据租户ID获取租户应用列表
  rpc GetTenantAppsByTenantID (GetTenantAppsByTenantIDRequest) returns (GetTenantAppsByTenantIDResponse);
  
  // 根据应用ID获取租户应用列表
  rpc GetTenantAppsByAppID (GetTenantAppsByAppIDRequest) returns (GetTenantAppsByAppIDResponse);
}

// TenantApp Service Messages
message GetTenantAppByIDRequest {
  string id = 1;
}

message GetTenantAppByIDResponse {
  TenantApp tenant_app = 1;
}

message GetTenantAppsByTenantIDRequest {
  string tenant_id = 1;
}

message GetTenantAppsByTenantIDResponse {
  repeated TenantApp tenant_apps = 1;
}

message GetTenantAppsByAppIDRequest {
  string app_id = 1;
}

message GetTenantAppsByAppIDResponse {
  repeated TenantApp tenant_apps = 1;
}
